[UI] look and feel enhancements.

--- a/app/assets/stylesheets/spree/frontend/_variables.scss
+++ b/app/assets/stylesheets/spree/frontend/_variables.scss
@@ -1,4 +1,5 @@
 /*--------------------------------
   Colors
 --------------------------------*/
-$brand-primary:   #2775bd;
+$brand-primary:   #16a79d;
+$text-color: #d9534f;
