--- a/app/assets/stylesheets/spree/frontend/frontend_bootstrap.css.scss
+++ b/app/assets/stylesheets/spree/frontend/frontend_bootstrap.css.scss
@@ -3,6 +3,12 @@
 @import "bootstrap-sprockets";
 @import "variables";
 @import "bootstrap";
+@import url(http://fonts.googleapis.com/css?family=Bree+Serif);
+
+body {
+  font-family: 'Bree Serif', serif;
+  font-size: 16px;
+}
 
 // -- Spree Custom Header and Footer ---------------------
 #spree-header {
@@ -10,8 +16,9 @@
   margin-bottom: $line-height-computed;
 
   #header {
-    background: rgba($gray-lighter, 0.4);
+    background: rgba($gray-lighter, 0.3);
     padding: $line-height-computed 0;
+    max-height: 100px;
   }
 
   #logo {
@@ -19,7 +26,7 @@
 
     img {
       max-width: 100%;
-      max-height: 50px;
+      max-height: 70px;
     }
   }
 
