[UI] minor tweeks for checkout pages, and change font family.

--- a/app/assets/stylesheets/spree/frontend/_variables.scss
+++ b/app/assets/stylesheets/spree/frontend/_variables.scss
@@ -19,6 +19,7 @@ $link-color: $text-color;
 
 
 $panel-footer-bg: $footer-color-primary;
+$panel-default-heading-bg: $footer-color-primary;
 $panel-inner-border: $footer-color-primary;
 $panel-default-border: $footer-color-primary;
 
