--- a/app/assets/stylesheets/spree/frontend/footer.css.scss
+++ b/app/assets/stylesheets/spree/frontend/footer.css.scss
@@ -130,6 +130,7 @@
 .footer-bottom {
   background: #CCCC9A;
   border-top: 1px solid #DDDDDD;
+  color: #ffffff;
   padding-top: 10px;
   padding-bottom: 10px;
 }
