--- a/app/views/shared/_custom_header.html.erb
+++ b/app/views/shared/_custom_header.html.erb
@@ -6,7 +6,7 @@
   <div class="container">
     <div class="row row1">
       <ul class="largenav pull-right">
-        <li class="upper-links"><%= link_to Spree.t(:home), spree.root_path %></li>
+        <li class="upper-links"><%= link_to Spree.t(:home), spree.root_path,  :class=>'links' %></li>
         <%= render partial: 'shared/login_bar' %>
         <li class="upper-links">
           <a class="links" href="">
