[UI] specify minimum height for the body.

--- a/app/assets/stylesheets/spree/frontend/frontend_bootstrap.css.scss
+++ b/app/assets/stylesheets/spree/frontend/frontend_bootstrap.css.scss
@@ -13,6 +13,10 @@ body {
   font-size: 16px;
 }
 // -- Spree Custom Header and Footer ---------------------
+#content{
+  min-height: 700px;
+}
+
 
 #spree-header {
   background-color: $brand-primary;
