--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -40,18 +40,35 @@
         <h3> Get Social </h3>
         <ul>
           <li>
+
+            <div class="input-append newsletter-box text-center">
+              <form action="//toytokri.us15.list-manage.com/subscribe/post?u=317dee1e217a0244822f4bc4b&amp;id=eeb1c04cd6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                <div id="mc_embed_signup_scroll">
+
+                  <input type="email" value="" name="EMAIL" class="full text-center" id="mce-EMAIL" placeholder="email address" required>
+                  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                  <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_317dee1e217a0244822f4bc4b_eeb1c04cd6" tabindex="-1" value=""></div>
+                  <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn  bg-light-green"></div>
+                </div>
+              </form>
+            </div>
+
+            <!--End mc_embed_signup-->
+
+          <!--
             <div class="input-append newsletter-box text-center">
               <input type="text" class="full text-center" placeholder="Email ">
               <button class="btn  bg-light-green" type="button"> Subscribe <i class="fa fa-long-arrow-right"> </i> </button>
             </div>
+            -->
           </li>
         </ul>
         <ul class="social">
-          <li> <a href="#"> <i class=" fa fa-facebook">   </i> </a> </li>
-          <li> <a href="#"> <i class="fa fa-twitter">   </i> </a> </li>
-          <li> <a href="#"> <i class="fa fa-google-plus">   </i> </a> </li>
-          <li> <a href="#"> <i class="fa fa-pinterest">   </i> </a> </li>
-          <li> <a href="#"> <i class="fa fa-youtube">   </i> </a> </li>
+          <li> <a href="https://www.facebook.com/toytokri" target="_blank"> <i class=" fa fa-facebook">   </i> </a> </li>
+          <li> <a href="https://twitter.com/toytokri" target="_blank"> <i class="fa fa-twitter">   </i> </a> </li>
+          <li> <a href="https://plus.google.com/108685997455973807636" target="_blank"> <i class="fa fa-google-plus">   </i> </a> </li>
+          <!--<li> <a href="#"> <i class="fa fa-pinterest">   </i> </a> </li>-->
+          <li> <a href="https://www.youtube.com/channel/UCKTiqcUk0UuQmE1GGEvUlxg" target="_blank"> <i class="fa fa-youtube">   </i> </a> </li>
         </ul>
       </div>
     </div>
