[Config] change toytokri.com reference to to point to kidstokri.com

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -68,8 +68,8 @@
           </li>
         </ul>
         <ul class="social">
-          <li> <a href="https://www.facebook.com/toytokri" target="_blank"> <i class=" fa fa-facebook">   </i> </a> </li>
-          <li> <a href="https://twitter.com/toytokri" target="_blank"> <i class="fa fa-twitter">   </i> </a> </li>
+          <li> <a href="https://www.facebook.com/kidstokri" target="_blank"> <i class=" fa fa-facebook">   </i> </a> </li>
+          <li> <a href="https://twitter.com/kidstokri" target="_blank"> <i class="fa fa-twitter">   </i> </a> </li>
           <li> <a href="https://plus.google.com/108685997455973807636" target="_blank"> <i class="fa fa-google-plus">   </i> </a> </li>
           <!--<li> <a href="#"> <i class="fa fa-pinterest">   </i> </a> </li>-->
           <li> <a href="https://www.youtube.com/channel/UCKTiqcUk0UuQmE1GGEvUlxg" target="_blank"> <i class="fa fa-youtube">   </i> </a> </li>
