--- a/public/404.html.erb
+++ b/public/404.html.erb
@@ -16,7 +16,7 @@
           <!-- This file lives in public/404.html -->
               <img id="error-image" src="/image/error.png" alt="The page you were looking for doesn't exist">
           <span id="error-message-404"><h2>The page you're trying to reach doesn't exist.</h2></span>
-          <span id="link-404">Go back to <%= link_to "toytokri.com", spree.root_path %> or <%= link_to "contact us", spree.root_path %> about the problem.</span>
+          <span id="link-404">Go back to <%= link_to "kidstokri.com", spree.root_path %> or <%= link_to "contact us", spree.root_path %> about the problem.</span>
 
         </div>
     </div>
