--- a/public/500.html.erb
+++ b/public/500.html.erb
@@ -17,7 +17,7 @@
     <img id="error-image" src="/image/error.png" alt="Sorry, you encountered an error">
     <span id="error-message-500"><h2>Sorry, you encountered an error</h2></span>
     <span id="link-500-line1">We have been notified of the details of this error and will be working to fix it soon.</span>
-    <span id="link-500-line2">Go back to <%= link_to "toytokri.com", spree.root_path %> or <%= link_to "contact us", spree.root_path %> about the problem.</span>
+    <span id="link-500-line2">Go back to <%= link_to "kidstokri.com", spree.root_path %> or <%= link_to "contact us", spree.root_path %> about the problem.</span>
 
   </div>
 </div>
