--- a/public/422.html.erb
+++ b/public/422.html.erb
@@ -16,7 +16,7 @@
         <img id="error-image" src="/image/error.png" alt="The change you wanted was rejected.">
         <span id="error-message-422"><h2>The change you wanted was rejected.</h2></span>
         <span id="link-422-line1">Maybe you tried to change something you didn't have access to.</span>
-        <span id="link-422-line2">Go back to <%= link_to "toytokri.com", spree.root_path %> or <%= link_to "contact us", spree.root_path %> about the problem.</span>
+        <span id="link-422-line2">Go back to <%= link_to "kidstokri.com", spree.root_path %> or <%= link_to "contact us", spree.root_path %> about the problem.</span>
 
     </div>
 </div>
