Initial commit with content for public pages.

--- a/app/views/spree/page/about.html.erb
+++ b/app/views/spree/page/about.html.erb
@@ -1,1 +1,20 @@
 <h1>About Us</h1>
+<p>
+  Kidstokri.com is an online toy store. It offers educational and entertainment toys suitable for children of different age groups.
+  Unlike most of the other online toy stores, Kidstokri.com does not organize toys in random categories.
+  Here they are categorized according to physical, cognitive, imagination, social and emotional skills. The online toy store has selected the toys and categories with the help of experts.
+  Hence, here you can easily pick up a toy that aids in the healthy development of your child.
+  Kidstokri.com is a superb ecommerce store for buying gifts for children.
+</p>
+
+<p
+  Here you can shop according to age groups and much more. The online store will guide you in finding the appropriate gift for a child with the help of its online toy locator.
+  Hence, Kidstokri.com is a hassle-free destination for buying toys. Hundreds of toys of prominent brands are available in the online store.
+  The easy return policy enables customers to return a product that is not functioning properly within 7 days after purchase.
+  Kidstokri.com will either replace the product or refund the full amount. The online store assures safe online transaction.
+  You can make purchases either with credit or debit card or through net banking.
+</p>
+
+</p>
+  Share with us your shopping experience at Kidstokri.com to help us to make you shopping experience better.
+</p>
