--- a/app/views/spree/page/privacy_policy.html.erb
+++ b/app/views/spree/page/privacy_policy.html.erb
@@ -1,1 +1,22 @@
 <h1>Privacy Policy</h1>
+<p>
+  We view protection of your privacy as a very important principle.
+
+  You can visit the Site and browse without having to provide personal details.
+  During your visit to the Site you remain anonymous and at no time can we identify you unless you have an account on the Site and log on with your user name and password.
+  Information essential to execution of the order (e.g. product, billing address, shipping address) are provided to vendors where necessary
+  (e.g. payment gateway, courier company). We will use your contact information (e.g. email address) from time to time, to send promotional emails.
+  You have the option at any time to unsubscribe and stop receiving promotional emails by writing to us at contact@ytoytokri.com. In most cases, such promotional emails
+  will carry an unsubscribe link.
+</p>
+
+<p>
+  We shall not sell or rent your personal information to third parties for their marketing purposes.
+  We understand clearly that you and Your Information is one of our most important assets. We store and process Your Information on computers
+  that are protected by physical as well as technological security devices.
+</p>
+
+<p>
+  If you object to Your Information being transferred or used in this way please do not use the site or provide us with your information.
+</p>
+
