--- a/app/views/spree/page/snr_policy.html.erb
+++ b/app/views/spree/page/snr_policy.html.erb
@@ -1,1 +1,29 @@
-<h1>Shipping and Return Policy</h1>
+<h1 xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">Shipping and Return Policy</h1>
+
+<h3>Shipping</h3>
+
+<p>We offer free shipping, within India, on all orders with a value greater than Rs 1,500.</p>
+<p> You will be shown applicable shipping rates during the checkout flow.</p>
+<p> We make every effort to process your order quickly.
+  Orders received by 1 PM are mostly dispatched on the same day.
+  When you order from our website, we will ensure that your Order gets dispatched within 48 hours.
+  In some cases it may take longer to receive the shipment depending on your location and accessibility.
+</p>
+
+<h3>Return and Replacement Policy</h3>
+<p>
+If for some reasons, you receive a product which is not functioning properly,
+  you can return the purchased item for a full refund within 7 days.
+  However, you are requested to bear the charges for shipping the product to us.
+  We will duly inspect the product on receipt at our end.
+  Damages due to neglect,
+  improper usage or application are not be covered under our Returns & Replacement Policy.
+</p>
+
+  <p>Address for Returns & Replacements:<p>
+  C/o KidsTokri<br>
+  G8 - Konark Campus, Viman Nagar </br>
+  Pune, Maharashtra </b>
+  Pin: 411014
+
+
