--- a/app/views/spree/page/tnc.html.erb
+++ b/app/views/spree/page/tnc.html.erb
@@ -1,1 +1,74 @@
 <h1>Terms and Conditions</h1>
+
+<h3>1. General terms of use </h3>
+
+<p> 1.1 Only individuals who are 18 years of age or older may use the Website.
+  If you are under 18 years of age and you wish to download, install, access or use the Website
+  or purchase any products listed on the Websites, your parents or legal guardian must acknowledge
+  and agree to the Terms of Use and Privacy Policy. Should your parents or legal guardian fail to agree or acknowledge the Terms of Use and Privacy Policy, you shall immediately discontinue using the Website.
+</p>
+<p> 1.2 By using the Website and purchasing products listed on the Website, you represent and warrant that:</p>
+<ul>
+    <li>All information that you submit is truthful, lawful and accurate and that you agree to maintain the accuracy of such information.</li>
+    <li>Your use of the Website shall be solely for your personal use and you shall not authorize others to use your profile or email address and that you are solely responsible for all content published or displayed through any email messages, and your interactions with other users and you shall abide by all applicable local, state, national and foreign laws, treaties and regulations, including those related to data privacy, international communications and the transmission of technical or personal data.</li>
+    <li>You will not use the Website in any way that is unlawful, or harms us or any other person or entity, as determined in our sole discretion.</li>
+    <li>You will not use another person’s username, password or other account information, or another person's name, likeness, voice, image or photograph or impersonate any person or entity or misrepresent your identity or affiliation with any person or entity.</li>
+    <li>You will not engage in any form of antisocial, disrupting, or destructive acts, including "flaming," "spamming," "flooding," "trolling," and "griefing" as those terms are commonly understood and used on the Internet.</li>
+    <li>You shall not access the Website without authority or use the Website in a manner that damages, interferes or disrupts:
+         <ul>
+            <li>any part of the Website or the Website software; or </li>
+            <li>any equipment or any network on which the Website is stored or any equipment of any Third Party.</li>
+         </ul>
+</ul>
+</p>
+
+<h3> 2. Terms of service </h3>
+<p>2.1 By using the Website and purchasing products listed on the Website, you agree and acknowledge that: </p>
+<ul>
+    <li>Unless otherwise provided, the products made available for sale on the Website will be sold at the price listed and no discounted can be granted. The price of the products listed does not include duties, taxes, shipping and handling, which will be charged as applicable and would depend on the shipping address.</li>
+    <li>You shall be liable for any duties, taxes and storage that may be applicable on the purchase of the products and such duties, taxes and storage will be payable in addition to the price listed on the Website for the product purchased;</li>
+    <li>Placing an order on the Website constitutes an irrevocable acceptance of the purchase, unless rescinded / cancelled by us within 1 working days;</li>
+    <li>Once the order is placed on the Website we will raise an invoice against you and you will be required to make the full payment for the price of the product in accordance with the terms of the invoice generated. We reserve the right to cancel the order in the event of you failing to pay the full price of the product in accordance with the terms of this clause within the time period provided;</li>
+    <li>We also have the right to cancel any order placed on the Website at any time prior to delivery of the product, without assigning any reason whatsoever; and Products listed on the Website may vary in colour and texture when compared to the photograph available on the Website. While we have taken every effort to include a brief description setting out the details of each product listed on the Website and details of the materials used, we assume no responsibility for any errors or omissions that may occur in the description, price, condition or content relating to the products listed on the Website.</li>
+</ul>
+
+<p>2.2 Services provided:</p>
+<ul>
+    <li>We shall constantly endeavour to facilitate you to purchase the best services at a given place and time for the products showcased on the Website.</li>
+    <li>Each purchase of the products shall contain necessary instructions to redeem the products. The terms of the sale of the products shall be governed by these Terms of Use and any other terms as set out in such document confirm such sale of the products.</li>
+    <li>You shall not be entitled to receive any credit or cash back for the value of the products sold.</li>
+    <li>You agree that the specific product promised and sold to you cannot be used, exchanged for or combined with any other product offered on the Website.</li>
+    <li>You agree and acknowledge that we shall not be liable in the event of you failing to adhere to the Terms of Use.</li>
+    <li>You may be required to provide your credit or debit card details to the approved payment gateways while making the payment. In this regard you agree to provide correct and accurate credit/ debit card details to the approved payment gateways for availing services on the Website. You shall not use the credit/ debit card which is not lawfully owned by you, i.e. in any transaction, you must use your own credit/ debit card. The information provided by you will not be utilized or shared with any Third Party unless required in relation to fraud verifications or by law, regulation or court order. You will be solely responsible for the security and confidentiality of your credit/ debit card details. We expressly disclaim all liabilities that may arise as a consequence of any unauthorized use of your credit/ debit card.</li>
+</ul>
+
+<p>2.3 You shall be entitled to a refund only under the following circumstances: </p>
+<ul>
+    <li>in the event of the product being damaged during shipping; or </li>
+    <li>an error that is directly attributable to us has occurred during the purchase of such product; or </li>
+    <li>in the event of cancelation after a purchase, or change in the terms of service, including, but not limited to, change in the prices or the availability of the product. </li>
+</ul>
+
+<p>2.4 We constantly strive to provide you with accurate information on  Website. However, in the event of an error, we may, in our sole discretion, contact you with further instructions.</p>
+<p>2.5 If you use the products available on the Website, you do the same at your own risk. </p>
+
+
+<h3>3. Account Registration</h3>
+<p>3.1 In order to access certain features of the Website and in order to purchase the products listed on the Website, you may, in your discretion, register to create an account (“Account”) and become a member. You may register directly via the Website or as described in this section. <p/>
+<p>3.2 You can also register to join by logging into your account with certain third party social networking sites (“SNS”) (including, but not limited to, Facebook); each such account, a “Third Party Account”, via our Website, as described below. As part of the functionality of the Website, you may link your Account with Third Party Accounts, by either:</p>
+    <ul>
+        <li>providing your Third Party Account login information to us through the Website; or </li>
+        <li>allowing us to access your Third Party Account, as is permitted under the applicable terms and conditions that govern your use of each Third Party Account. </li>
+    </ul>
+<p>3.3 You represent that you are entitled to disclose your Third Party Account login information to us and/or grant us access to your Third Party Account (including, but not limited to, for use for the purposes described herein), without breach by you of any of the terms and conditions that govern your use of the applicable Third Party Account and without obligating us to pay any fees or making us subject to any usage limitations imposed by such third party service providers.</p>
+<p>3.4 By granting us access to any Third Party Accounts, you understand that we will access, make available and store (if applicable) any content or information that you have provided to and stored in your Third Party Account (“SNS Content”) so that it is available on and through the Website via your Account and Account profile page.</p>
+<p>3.5 Unless otherwise specified in these Terms of Use, all SNS Content, if any, will be considered to be member’s content for all purposes of these Terms. </p>
+<p>3.6 Depending on the Third Party Accounts you choose and subject to the privacy settings that you have set in such Third Party Accounts, personally identifiable information that you post to your Third Party Accounts will be available on and through your Account on the Website. </p>
+<p>3.7 Please note that if a Third Party Account or associated service becomes unavailable or our access to such Third Party Account is terminated by the third party service provider, then SNS Content will no longer be available on and through the Website.</p>
+<p>3.8 We will create your Account and your Account profile page for your use of the Website based upon the personal information you provide to us or that we obtain via an SNS as described above. You may not have more than one (1) active Account.</p>
+<p>3.9 You agree to provide accurate, current and complete information during the registration process and to update such information to keep it accurate, current and complete.</p>
+<p>3.10 We reserve the right to suspend or terminate your Account and your access to the Website if you create more than one (1) Account or if any information provided during the registration process or thereafter proves to be inaccurate, not current or incomplete. </p>
+<p>3.11 You are responsible for safeguarding your password. You agree that you will not disclose your password to any third party and that you will take sole responsibility for any activities or actions under your Account, whether or not you have authorized such activities or actions. You will immediately notify us of any unauthorized use of your Account. </p>
+<p>3.12 Registration on the Website as a member is not mandatory. You may continue to access the Website and purchase products as a guest. </p>
+
+</p>
